overflow fix

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,7 @@
 html,
 body {
   width: 100vw;
+  overflow-x: hidden;
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
